--- a/Calculator/UI/UI.vcxproj
+++ b/Calculator/UI/UI.vcxproj
@@ -20,8 +20,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{F8BCDF90-F6FB-4F06-A71F-C128E474AB68}</ProjectGuid>
-    <RootNamespace>UI</RootNamespace>
+    <ProjectGuid>{A23BE594-919D-4840-A04B-7E028B7D8791}</ProjectGuid>
+    <RootNamespace>ui</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
