--- a/Calculator/controller/controller.vcxproj
+++ b/Calculator/controller/controller.vcxproj
@@ -20,8 +20,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{636DFD68-9F88-4AF5-8FFD-E932C575618A}</ProjectGuid>
-    <RootNamespace>model</RootNamespace>
+    <ProjectGuid>{5222D72F-4046-4998-A82A-A40A94E8F2A2}</ProjectGuid>
+    <RootNamespace>controller</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
