--- a/Calculator/utility/utility.vcxproj
+++ b/Calculator/utility/utility.vcxproj
@@ -20,8 +20,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{3F840951-9F95-48D3-8410-74589BF95D9C}</ProjectGuid>
-    <RootNamespace>Calculator</RootNamespace>
+    <ProjectGuid>{07371814-FCF8-483D-9FC7-61E94FE945C2}</ProjectGuid>
+    <RootNamespace>utility</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
