Utility: publisher declaration

--- a/Calculator/utility/utility.vcxproj
+++ b/Calculator/utility/utility.vcxproj
@@ -123,6 +123,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Publisher.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Publisher.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
