--- a/Calculator/view/view.vcxproj
+++ b/Calculator/view/view.vcxproj
@@ -20,8 +20,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{A23BE594-919D-4840-A04B-7E028B7D8791}</ProjectGuid>
-    <RootNamespace>ui</RootNamespace>
+    <ProjectGuid>{2068B5DF-F268-4594-9403-30BAC67ECA52}</ProjectGuid>
+    <RootNamespace>view</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
