--- a/Calculator/broker/broker.vcxproj
+++ b/Calculator/broker/broker.vcxproj
@@ -20,8 +20,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{5222D72F-4046-4998-A82A-A40A94E8F2A2}</ProjectGuid>
-    <RootNamespace>controller</RootNamespace>
+    <ProjectGuid>{15D0659C-71A8-4387-93CC-11D5A59F8141}</ProjectGuid>
+    <RootNamespace>broker</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -76,6 +76,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>E:\Software_Development\Cpp-Calculator\Calculator\view;E:\Software_Development\Cpp-Calculator\Calculator\utility;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -87,6 +88,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>E:\Software_Development\Cpp-Calculator\Calculator\view;E:\Software_Development\Cpp-Calculator\Calculator\utility;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -100,6 +102,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>E:\Software_Development\Cpp-Calculator\Calculator\view;E:\Software_Development\Cpp-Calculator\Calculator\utility;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -115,6 +118,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>E:\Software_Development\Cpp-Calculator\Calculator\view;E:\Software_Development\Cpp-Calculator\Calculator\utility;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -122,6 +126,20 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
+  <ItemGroup>
+    <ClCompile Include="StackChangedObserver.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="StackChangedObserver.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\utility\utility.vcxproj">
+      <Project>{07371814-fcf8-483d-9fc7-61e94fe945c2}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\view\view.vcxproj">
+      <Project>{2068b5df-f268-4594-9403-30bac67eca52}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
