--- a/Calculator/broker/broker.vcxproj.filters
+++ b/Calculator/broker/broker.vcxproj.filters
@@ -15,12 +15,12 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="UserInterface.cpp">
+    <ClCompile Include="StackChangedObserver.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="UserInterface.h">
+    <ClInclude Include="StackChangedObserver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
