Controller: abstract Command class declaration

--- a/Calculator/controller/controller.vcxproj
+++ b/Calculator/controller/controller.vcxproj
@@ -18,6 +18,9 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Command.h" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{5222D72F-4046-4998-A82A-A40A94E8F2A2}</ProjectGuid>
