--- a/Calculator/controller/controller.vcxproj
+++ b/Calculator/controller/controller.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BinaryCommand.h" />
     <ClInclude Include="Command.h" />
     <ClInclude Include="CommandRegistry.h" />
     <ClInclude Include="CosineCommand.h" />
@@ -31,6 +32,7 @@
     <ClInclude Include="UnaryCommand.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BinaryCommand.cpp" />
     <ClCompile Include="CommandRegistry.cpp" />
     <ClCompile Include="Dispatcher.cpp" />
     <ClCompile Include="Manager.cpp" />
