--- a/Calculator/controller/controller.vcxproj.filters
+++ b/Calculator/controller/controller.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="EnterNumberCommand.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="BinaryCommand.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Dispatcher.cpp">
@@ -57,6 +60,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="UnaryCommand.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BinaryCommand.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
