--- a/Calculator/view/view.vcxproj
+++ b/Calculator/view/view.vcxproj
@@ -127,9 +127,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Display.cpp" />
+    <ClCompile Include="GraphicalUserInterface.cpp" />
+    <ClCompile Include="GraphicalUserInterfaceModel.cpp" />
     <ClCompile Include="UserInterface.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Display.h" />
+    <ClInclude Include="GraphicalUserInterface.h" />
+    <ClInclude Include="GraphicalUserInterfaceModel.h" />
+    <ClInclude Include="StateData.h" />
     <ClInclude Include="UserInterface.h" />
   </ItemGroup>
   <ItemGroup>
