--- a/Calculator/view/view.vcxproj.filters
+++ b/Calculator/view/view.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="GraphicalUserInterfaceModel.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GraphicalUserInterfaceController.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="UserInterface.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="StateData.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GraphicalUserInterfaceController.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
