--- a/Calculator/view/view.vcxproj
+++ b/Calculator/view/view.vcxproj
@@ -141,6 +141,7 @@
     <ClInclude Include="Resource.h" />
     <ClInclude Include="StateData.h" />
     <ClInclude Include="UserInterface.h" />
+    <ClInclude Include="UserInterfaceEventData.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\utility\utility.vcxproj">
