--- a/Calculator/view/view.vcxproj.filters
+++ b/Calculator/view/view.vcxproj.filters
@@ -53,5 +53,8 @@
     <ClInclude Include="Resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="UserInterfaceEventData.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
