--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,7 @@
 *.app
 *.vs
  .vcxproj
- .vcxproj.filters
+*.vcxproj.filters
 
 # build
 *.suo
@@ -49,7 +49,7 @@
 *.user
 *.userosscache
 *.sln.docstates
- .sln
+*.sln
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
@@ -134,7 +134,7 @@ StyleCopReport.xml
 *.tlog
 *.vspscc
 *.vssscc
-.builds
+*.builds
 *.pidb
 *.svclog
 *.scc
